--- a/Toggl.Giskard/Resources/layout/StartTimeEntryActivityQuerySymbolCell.axml
+++ b/Toggl.Giskard/Resources/layout/StartTimeEntryActivityQuerySymbolCell.axml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|left" />
     <View
+        android:id="@+id/Separator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_gravity="bottom"
