--- a/Toggl.Giskard/Resources/layout/SelectProjectActivityTaskCell.axml
+++ b/Toggl.Giskard/Resources/layout/SelectProjectActivityTaskCell.axml
@@ -20,11 +20,13 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical|left" />
     <View
+        android:id="@+id/Separator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_gravity="bottom"
         android:layout_width="match_parent" />
     <View
+        android:id="@+id/FadeView"
         android:visibility="visible"
         android:background="@drawable/TransparentToWhiteGradient"
         android:layout_width="48dp"
