--- a/Toggl.Giskard/Resources/layout/SelectTagsActivityCell.axml
+++ b/Toggl.Giskard/Resources/layout/SelectTagsActivityCell.axml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|left" />
     <View
+        android:id="@+id/FadeView"
         android:background="@drawable/TransparentToWhiteGradient"
         android:layout_width="48dp"
         android:layout_marginRight="24dp"
@@ -26,6 +27,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical|right" />
     <View
+        android:id="@+id/SelectedIndicatorBackground"
         android:background="@android:color/white"
         android:layout_width="24dp"
         android:layout_height="match_parent"
@@ -38,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|right" />
     <View
+        android:id="@+id/Separator"
         android:foregroundTint="#328fff"
         android:background="@color/separator"
         android:layout_height="0.5dp"
