--- a/Toggl.Giskard/Resources/layout/CalendarSettingsActivity.axml
+++ b/Toggl.Giskard/Resources/layout/CalendarSettingsActivity.axml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/defaultBackground">
+    android:orientation="vertical">
     
     <android.support.v7.widget.Toolbar
         android:id="@+id/Toolbar"
@@ -18,6 +17,7 @@
         app:title="Calendar Settings"/>
     
     <View
+        android:id="@+id/CalendarActivityTopSeparator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_width="match_parent"
@@ -29,6 +29,7 @@
         android:clickable="true"
         android:background="?attr/selectableItemBackground">
         <TextView
+            android:id="@+id/LinkCalendarsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
@@ -37,6 +38,7 @@
             android:textColor="@android:color/black"
             android:text="@string/LinkCalendars"/>
         <TextView
+            android:id="@+id/LinkCalendarsSubText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -56,6 +58,7 @@
             android:clickable="false"/>
     </FrameLayout>
     <View
+        android:id="@+id/CalendarActivityBottomSeparator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_width="match_parent" />
