--- a/Toggl.Giskard/Resources/layout/SelectUserCalendarsBase.axml
+++ b/Toggl.Giskard/Resources/layout/SelectUserCalendarsBase.axml
@@ -7,6 +7,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <TextView
+        android:id="@+id/SelectCalendarsTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -19,6 +20,7 @@
         android:lineSpacingExtra="8sp"
         android:text="@string/SelectCalendars"/>
     <TextView
+        android:id="@+id/SelectCalendarsSubTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -32,6 +34,7 @@
         android:lineSpacingExtra="8sp"
         android:text="@string/SelectCalendarsMessage"/>
     <View
+        android:id="@+id/Separator"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginTop="16dp"
