--- a/Toggl.Giskard/Resources/layout/UpcomingEventsNotificationSettingsFragment.axml
+++ b/Toggl.Giskard/Resources/layout/UpcomingEventsNotificationSettingsFragment.axml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -17,6 +18,7 @@
         android:lineSpacingExtra="8sp"
         android:text="@string/SetSmartReminders"/>
     <TextView
+        android:id="@+id/SubTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -30,6 +32,7 @@
         android:lineSpacingExtra="8sp"
         android:text="@string/SetSmartRemindersMessage"/>
     <View
+        android:id="@+id/Separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
