--- a/Toggl.Giskard/Resources/layout/PomodoroEditWorkflowActivity.axml
+++ b/Toggl.Giskard/Resources/layout/PomodoroEditWorkflowActivity.axml
@@ -149,6 +149,7 @@
         android:layout_height="wrap_content" />
     <android.support.v7.widget.AppCompatSeekBar
         android:id="@+id/DurationSeekBar"
+		style="@style/Widget.AppCompat.SeekBar.Discrete"
         local:layout_constraintTop_toBottomOf="@id/DurationLabel"
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
